msr1_esp32c6/build/log/idf_py_stdout_output_328309
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj 
/home/mini/.espressif/tools/riscv32-esp-elf/esp-12.2.0_20230208/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mini/tools/msr1_esp32c6/build/config -I/home/mini/tools/msr1_esp32c6/main -I/home/mini/esp/esp-idf/components/newlib/platform_include -I/home/mini/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mini/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/mini/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mini/esp/esp-idf/components/freertos/esp_additions/include -I/home/mini/esp/esp-idf/components/freertos/esp_additions/arch/riscv/include -I/home/mini/esp/esp-idf/components/esp_hw_support/include -I/home/mini/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mini/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/mini/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/mini/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/mini/esp/esp-idf/components/heap/include -I/home/mini/esp/esp-idf/components/log/include -I/home/mini/esp/esp-idf/components/soc/include -I/home/mini/esp/esp-idf/components/soc/esp32c6 -I/home/mini/esp/esp-idf/components/soc/esp32c6/include -I/home/mini/esp/esp-idf/components/hal/esp32c6/include -I/home/mini/esp/esp-idf/components/hal/include -I/home/mini/esp/esp-idf/components/hal/platform_port/include -I/home/mini/esp/esp-idf/components/esp_rom/include -I/home/mini/esp/esp-idf/components/esp_rom/include/esp32c6 -I/home/mini/esp/esp-idf/components/esp_rom/esp32c6 -I/home/mini/esp/esp-idf/components/esp_common/include -I/home/mini/esp/esp-idf/components/esp_system/include -I/home/mini/esp/esp-idf/components/esp_system/port/soc -I/home/mini/esp/esp-idf/components/esp_system/port/include/riscv -I/home/mini/esp/esp-idf/components/esp_system/port/include/private -I/home/mini/esp/esp-idf/components/riscv/include -I/home/mini/esp/esp-idf/components/lwip/include -I/home/mini/esp/esp-idf/components/lwip/include/apps -I/home/mini/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mini/esp/esp-idf/components/lwip/lwip/src/include -I/home/mini/esp/esp-idf/components/lwip/port/include -I/home/mini/esp/esp-idf/components/lwip/port/freertos/include -I/home/mini/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mini/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mini/esp/esp-idf/components/esp_ringbuf/include -I/home/mini/esp/esp-idf/components/efuse/include -I/home/mini/esp/esp-idf/components/efuse/esp32c6/include -I/home/mini/esp/esp-idf/components/driver/include -I/home/mini/esp/esp-idf/components/driver/deprecated -I/home/mini/esp/esp-idf/components/driver/analog_comparator/include -I/home/mini/esp/esp-idf/components/driver/dac/include -I/home/mini/esp/esp-idf/components/driver/gpio/include -I/home/mini/esp/esp-idf/components/driver/gptimer/include -I/home/mini/esp/esp-idf/components/driver/i2c/include -I/home/mini/esp/esp-idf/components/driver/i2s/include -I/home/mini/esp/esp-idf/components/driver/ledc/include -I/home/mini/esp/esp-idf/components/driver/mcpwm/include -I/home/mini/esp/esp-idf/components/driver/parlio/include -I/home/mini/esp/esp-idf/components/driver/pcnt/include -I/home/mini/esp/esp-idf/components/driver/rmt/include -I/home/mini/esp/esp-idf/components/driver/sdio_slave/include -I/home/mini/esp/esp-idf/components/driver/sdmmc/include -I/home/mini/esp/esp-idf/components/driver/sigma_delta/include -I/home/mini/esp/esp-idf/components/driver/spi/include -I/home/mini/esp/esp-idf/components/driver/temperature_sensor/include -I/home/mini/esp/esp-idf/components/driver/touch_sensor/include -I/home/mini/esp/esp-idf/components/driver/twai/include -I/home/mini/esp/esp-idf/components/driver/uart/include -I/home/mini/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/mini/esp/esp-idf/components/esp_pm/include -I/home/mini/esp/esp-idf/components/mbedtls/port/include -I/home/mini/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/mini/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/mini/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/mini/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/mini/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/mini/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/mini/esp/esp-idf/components/esp_app_format/include -I/home/mini/esp/esp-idf/components/bootloader_support/include -I/home/mini/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/mini/esp/esp-idf/components/esp_partition/include -I/home/mini/esp/esp-idf/components/app_update/include -I/home/mini/esp/esp-idf/components/esp_mm/include -I/home/mini/esp/esp-idf/components/spi_flash/include -I/home/mini/esp/esp-idf/components/pthread/include -I/home/mini/esp/esp-idf/components/esp_timer/include -I/home/mini/esp/esp-idf/components/app_trace/include -I/home/mini/esp/esp-idf/components/esp_event/include -I/home/mini/esp/esp-idf/components/nvs_flash/include -I/home/mini/esp/esp-idf/components/esp_phy/include -I/home/mini/esp/esp-idf/components/esp_phy/esp32c6/include -I/home/mini/esp/esp-idf/components/vfs/include -I/home/mini/esp/esp-idf/components/esp_netif/include -I/home/mini/esp/esp-idf/components/wpa_supplicant/include -I/home/mini/esp/esp-idf/components/wpa_supplicant/port/include -I/home/mini/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/mini/esp/esp-idf/components/esp_coex/include -I/home/mini/esp/esp-idf/components/esp_wifi/include -I/home/mini/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/mini/esp/esp-idf/components/unity/include -I/home/mini/esp/esp-idf/components/unity/unity/src -I/home/mini/esp/esp-idf/components/cmock/CMock/src -I/home/mini/esp/esp-idf/components/console -I/home/mini/esp/esp-idf/components/http_parser -I/home/mini/esp/esp-idf/components/esp-tls -I/home/mini/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/mini/esp/esp-idf/components/esp_adc/include -I/home/mini/esp/esp-idf/components/esp_adc/interface -I/home/mini/esp/esp-idf/components/esp_adc/esp32c6/include -I/home/mini/esp/esp-idf/components/esp_adc/deprecated/include -I/home/mini/esp/esp-idf/components/esp_eth/include -I/home/mini/esp/esp-idf/components/esp_gdbstub/include -I/home/mini/esp/esp-idf/components/esp_hid/include -I/home/mini/esp/esp-idf/components/tcp_transport/include -I/home/mini/esp/esp-idf/components/esp_http_client/include -I/home/mini/esp/esp-idf/components/esp_http_server/include -I/home/mini/esp/esp-idf/components/esp_https_ota/include -I/home/mini/esp/esp-idf/components/esp_psram/include -I/home/mini/esp/esp-idf/components/esp_lcd/include -I/home/mini/esp/esp-idf/components/esp_lcd/interface -I/home/mini/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/mini/esp/esp-idf/components/protocomm/include/common -I/home/mini/esp/esp-idf/components/protocomm/include/security -I/home/mini/esp/esp-idf/components/protocomm/include/transports -I/home/mini/esp/esp-idf/components/esp_local_ctrl/include -I/home/mini/esp/esp-idf/components/espcoredump/include -I/home/mini/esp/esp-idf/components/espcoredump/include/port/riscv -I/home/mini/esp/esp-idf/components/wear_levelling/include -I/home/mini/esp/esp-idf/components/sdmmc/include -I/home/mini/esp/esp-idf/components/fatfs/diskio -I/home/mini/esp/esp-idf/components/fatfs/vfs -I/home/mini/esp/esp-idf/components/fatfs/src -I/home/mini/esp/esp-idf/components/idf_test/include -I/home/mini/esp/esp-idf/components/idf_test/include/esp32c6 -I/home/mini/esp/esp-idf/components/ieee802154/include -I/home/mini/esp/esp-idf/components/json/cJSON -I/home/mini/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/mini/esp/esp-idf/components/spiffs/include -I/home/mini/esp/esp-idf/components/wifi_provisioning/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/home/mini/tools/msr1_esp32c6=. -fmacro-prefix-map=/home/mini/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -c /home/mini/tools/msr1_esp32c6/main/http_server.c
/home/mini/tools/msr1_esp32c6/main/http_server.c: In function 'api_ip_get_handler':
/home/mini/tools/msr1_esp32c6/main/http_server.c:48:34: error: 'HTTPD_503_SERVICE_UNAVAILABLE' undeclared (first use in this function)
   48 |         httpd_resp_send_err(req, HTTPD_503_SERVICE_UNAVAILABLE, "No IP");
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/mini/tools/msr1_esp32c6/main/http_server.c:48:34: note: each undeclared identifier is reported only once for each function it appears in
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/mini/tools/msr1_esp32c6/build/bootloader/esp-idf/esptool_py && /home/mini/.espressif/python_env/idf5.1_py3.11_env/bin/python /home/mini/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/mini/tools/msr1_esp32c6/build/bootloader/bootloader.bin
Bootloader binary size 0x5350 bytes. 0x2cb0 bytes (35%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
